--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+* {
+    font-family: Poppins;
+}
 html {
-    background: url(Images/back.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    scroll-behavior: smooth;
 }
 body {
     margin: 0;
     padding: 0;
-    font-family: Poppins;
 }
 
 .top {
@@ -30,6 +30,7 @@ nav {
 nav h1 {
     margin: 0;
     color: #FFEEDA;
+    margin-left: -45%;
 }
 
 .nav-links {
@@ -41,4 +42,84 @@ nav h1 {
     color: #FFEEDA;
     text-decoration: none;
     font-weight: bold;
+}
+#one {
+    background: url(Images/Kavogueback.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+}
+#about {
+    align-items: center;
+    background: url(images/about.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0px;
+    height: 70vh;
+    width: 100%;
+    color: #FFEEDA;
+}
+#about img {
+    height: 30%;
+    width: 30%;
+}
+.main {
+    width: 1130px;
+    max-width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.about-text {
+    letter-spacing: 1px;
+    text-align: right;
+    
+}
+.about-text h1 {
+    color: #ffeeda;
+    font-size: 30px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+.about-text h5 {
+    color: #ffeeda;
+    letter-spacing: 2px;
+    font-size: 20px;
+    margin-bottom: 25px;
+    text-transform: capitalize;
+}
+.about-text p {
+    color:#FFEEDA;
+    text-justify: inter-word;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+.about-text button {
+    background-color: #ffd19a;
+    color: black;
+    font-family: Poppins;
+    font-weight: bold;
+    text-decoration: none;
+    border: 2px solid transparent;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+.about-text button:hover {
+    background-color: transparent;
+    border: 2px solid #A1733D;
+    color: #FFEEDA;
+}
+#contact {
+    align-items: center;
+    background: url(images/about.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0px;
+    height: 70vh;
+    width: 100%;
+    color: #FFEEDA;
 }
