--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav {
 nav h1 {
     margin: 0;
     color: #FFEEDA;
-    margin-left: -45%;
+    margin-left: -75%;
 }
 
 .nav-links {
@@ -51,7 +51,6 @@ nav h1 {
     width: 100%;
 }
 #about {
-    align-items: center;
     background: url(images/about.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -59,29 +58,38 @@ nav h1 {
     height: 70vh;
     width: 100%;
     color: #FFEEDA;
+    display: flex; 
+    align-items: center; 
 }
+
 #about img {
-    height: 30%;
-    width: 30%;
+    height: 26%;
+    width: 25%;
+    margin-left: 10%;
 }
+
 .main {
     width: 1130px;
     max-width: 95%;
     display: flex;
-    align-items: center;
     justify-content: space-around;
+    flex: 1; 
 }
+
 .about-text {
     letter-spacing: 1px;
     text-align: right;
-    
+    flex: 1; 
+
 }
+
 .about-text h1 {
+    margin-right: 25%;
     color: #ffeeda;
     font-size: 30px;
-    text-transform: capitalize;
     margin-bottom: 20px;
 }
+
 .about-text h5 {
     color: #ffeeda;
     letter-spacing: 2px;
@@ -89,8 +97,11 @@ nav h1 {
     margin-bottom: 25px;
     text-transform: capitalize;
 }
+
 .about-text p {
-    color:#FFEEDA;
+    text-align: right;
+    margin-right: 25%;
+    color: #FFEEDA;
     text-justify: inter-word;
     letter-spacing: 1px;
     line-height: 28px;
@@ -98,8 +109,10 @@ nav h1 {
     margin-bottom: 45px;
 }
 .about-text button {
+    margin-right: 25%;
     background-color: #ffd19a;
     color: black;
+    font-size: 20px;
     font-family: Poppins;
     font-weight: bold;
     text-decoration: none;
@@ -114,7 +127,6 @@ nav h1 {
     color: #FFEEDA;
 }
 #contact {
-    align-items: center;
     background: url(images/about.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -122,4 +134,57 @@ nav h1 {
     height: 70vh;
     width: 100%;
     color: #FFEEDA;
+    position: relative;
+    justify-content: space-around;
+}
+#contact h1{
+    text-align: right;
+    margin-right: 41%;
+    font-size: 30px;
+}
+#contact img{
+    padding: 120px;;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20%; 
+}
+.container {
+    display: flex;
+    justify-content: flex-end;
+}
+.box {
+    border: solid;
+    border-radius: 5px;
+    height: 50%;
+    width: 50%;
+    background-color: #FFEEDA;
+}
+.form-group {
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-left: 20px;
+}
+
+.form-control {
+    line-height: 1;
+    background-color: #FFEEDA;
+    width: 50%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: none; 
+    border-bottom: 2px solid #624727;
+    outline: none; 
+}
+
+.btn-primary {
+    margin-bottom: 20px;
+    margin-left: 20%;
+    font-weight: bolder;
+    border-radius: 20px;
+    background-color: #ffd19a;
+    color:#A1733D;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
 }
