--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ nav h1 {
     height: 100vh;
     width: 100%;
 }
+/* About Section */
 #about {
     background: url(Images/about.png);
     background-size: cover;
@@ -131,6 +132,7 @@ nav h1 {
     border: 2px solid #A1733D;
     color: #FFEEDA;
 }
+/* Contact Section */
 #contact {
     background: url(Images/about.png);
     background-size: cover;
@@ -223,10 +225,111 @@ nav h1 {
   }
 .fa-twitter {
     color: #9E8059;
-  }
+  }  
 .contact-details {
     position: relative;
+    font-size: 20px;
+    width: 10em;
+    text-align: center;
+    text-decoration: none;
+    justify-content: center;
+    left: 30em;
+    bottom: 14.5em;
 }
 .contact-details h3 {
     color: #624727;
+    padding-left: 3em;
 }
+.contact-details p {
+    position: relative;
+    color: #9E8059;
+    left: 30px;
+}
+/* Download Section */
+#download {
+    background: url(Images/about.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0px;
+    height: 70vh;
+    width: 100%;
+    color: #FFEEDA;
+    position: relative; 
+    justify-content: space-around;
+}
+#download .box {
+    position: absolute;
+    border: solid;
+    border-radius: 5px;
+    height: 50% ;
+    width: 50%;
+    margin-right: 25%;
+    background-color: #976c3a;
+}
+#download .search {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#download .search input {
+    width: 200px;
+    padding: 5px;
+    border: 1px solid #ccc;
+}
+
+#download .search button {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+#download .search button:hover {
+    background-color: #0056b3;
+}
+/*#download .container {  
+    flex-direction: row;
+    display: flex;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    justify-content: center;
+}
+
+#download .item {
+    position: relative;
+    flex-flow: row;
+    justify-content: flex-start;
+    flex-direction: row;
+    background-color: #f0f0f0;
+    padding: 30px;
+    text-align: center;
+    font-size: 10px;
+    border-radius: 20px;
+    width: 50px;
+    height: 50px;
+    flex-direction: row;
+} */
+#download .container {
+    display: flex;
+    flex-direction: column; /* Display items in a column */
+    align-items: center; /* Center items horizontally */
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#download .item {
+    background-color: #f0f0f0;
+    padding: 15px;
+    text-align: center;
+    font-size: 12px;
+    border-radius: 10px;
+    margin: 10px;
+    width: 250px;
+}
+
+
+
+
+
