--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ nav {
 
 #logo {
     margin-right: 0px;
-    margin-left: 20px;
+    margin-left: 70px;
 }
 
 nav h1 {
     position: absolute;
     color: #FFEEDA;
-    margin-left: 5em;
+    margin-left: 150px;
     
 }
 
@@ -222,7 +222,8 @@ nav h1 {
     text-align: center;
     text-decoration: none;
     top: 300px;
-    left: 30px;
+    left: 75px;
+    margin-left: 15px;
   }
 .fa:hover {
     opacity: 0.7;
@@ -304,13 +305,14 @@ nav h1 {
 }
 
 #download .container {
-    position: relative;
-    background-color: #FFFFFF;
+    position: absolute;
+    background-color: #FFEEDA;
     max-width: 600px;
     min-height: 40vh;
-    position: relative;
-    left: 40rem;
+    left: 50rem;
+    bottom: 20rem;
     border-radius: 30px;
+    
 }
 
 #download .item {
@@ -365,4 +367,30 @@ nav h1 {
     font-size: 50px;
     color: #FFD9AD;
     text-decoration: underline;
+}
+.container-text3 {
+    margin-left: 25px;
+    font-size: 20px;
+    margin-bottom: 3px;
+    color: #F7F8F3;
+}
+.button-shop {
+    background-color: #ffd19a;
+    color: black;
+    font-size: 20px;
+    font-family: Poppins;
+    font-weight: bold;
+    text-decoration: none;
+    border: 2px solid transparent;
+    padding: 12px 50px;
+    border-radius: 30px;
+    transition: .4s;
+    position: relative;
+    left: 75rem;
+    top: 5em;
+}
+.button-shop:hover {
+    background-color: transparent;
+    border: 2px solid #A1733D;
+    color: #FFEEDA;
 }
